Prevent heading background from obscuring itself.
The second line would overlap the first line, hiding the bottom of any
hanging glyphs, etc.

--- a/assets/article.css
+++ b/assets/article.css
@@ -99,7 +99,7 @@ nav img {
     font-weight: 900;
     letter-spacing: -1px;
     font-size: 36px;
-    line-height: 1;
+    line-height: 40px;
     margin: 0;
     padding: 0 10px;
     box-decoration-break: clone;
@@ -117,6 +117,9 @@ nav img {
     .post-title-container h1 {
         font-size: 24px;
         font-weight: 700;
+        line-height: 30px;
+        padding-top: 3px;
+        padding-bottom: 3px;
     }
 }
 
